2000-02-16  Matt Loper  <matt@helixcode.com>

	* tests/ui-tests/message-browser.c (mime_message_header_to_html):
	New function; converts a mime message's header into html.
	(get_gtk_html_contents_window): Enclose window in a frame.
	(get_gtk_html_header_window): same.

	* camel/camel-formatter.h (CAMEL_IS_FORMATTER): changed from
	CAMEL_IS_CAMEL_FORMATTER.

	* camel/camel-formatter.c (handle_mime_part): Renamed from
	handle_mime_message, as it can now handle CamelMimeBodyParts.
	(camel_formatter_class_init): Handle text/richtext as text/plain
	(ugly, but at least it's visible). Give body parts to
	handle_mime_part.
	(write_field_to_stream): Added an 'as_table_row' param.
	(write_recipients_to_stream): same.

	* tests/ui-tests/message-browser.c (handle_tree_item): Associate
	each tree item with a CamelDataWrapper.
	(tree_selection_changed): When a tree item is selected, reflect it
	in the gtkhtml window.

	* camel/camel-mime-message.c (camel_mime_message_init): Change
	mimetype of a mime message to "message/rfc822".

	* tests/ui-tests/message-browser.c (tree_selection_changed): New
	callback function, which will later change the main html window to
	reflect the newly-selected tree item.
	(get_gtk_html_contents_window): New function. Gets the content
	part of a message.
	(get_gtk_html_header_window): New function. Will get the header
	part of a message, when applicable.

	* camel/camel-formatter.c (str_tolower): Now returns a new string,
	rather than changing it in place.
	(initialize_camel_formatter): New function; gives a root
	CamelDataWrapper and a stream to a CamelFormatter.
	(camel_formatter_wrapper_to_html): New function. Translates any
	CamelDataWrapper into html.
	(lookup_unique_id): Allows the root object to be a
	CamelDataWrapper, which is more general than the previously
	required CamelMimeMessage.

2000-02-14  NotZed  <notzed@zedzone.helixcode.com>

	* configure.in (EXTRA_GNOME_CFLAGS): Add libunicode to CFLAGS/LIBS.
